# repogent

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.agents/plugins/: marketplace.json
.github/workflows/: ci.yml
docker/: validator.Dockerfile
docs/: architecture.md  security.md
docs/superpowers/plans/: 2026-07-20-repogent-mvp.md  2026-07-20-repogent-v02-local-reliability.md
docs/superpowers/specs/: 2026-07-20-repogent-mvp-design.md  2026-07-20-repogent-phase-2-design.md
examples/: scripted_run.json
examples/fastapi_demo/: app.py
examples/fastapi_demo/tests/: test_app.py
plugins/repogent/: .mcp.json
plugins/repogent/.codex-plugin/: plugin.json
plugins/repogent/skills/repogent/: SKILL.md
plugins/repogent/skills/repogent/agents/: openai.yaml
src/repogent/: __init__.py  agents.py  approval_gate.py  approvals.py  artifacts.py  candidates.py  cli.py  codex_cli.py  doctor.py  domain.py  events.py  execution.py  execution_gate.py  executor_selection.py  localization.py  mcp_models.py  mcp_server.py  patching.py  preflight.py  provider_context.py  providers.py  reporting.py  repository.py  run_builder.py  run_sessions.py  sanitization.py  symbols.py  validation.py  workflow.py
tests/fixtures/python_cli/: pyproject.toml
tests/fixtures/python_cli/src/example_cli/: __init__.py  __main__.py
tests/fixtures/python_cli/tests/: test_cli.py
tests/fixtures/python_data/: pyproject.toml
tests/fixtures/python_data/src/example_data/: transform.py
tests/fixtures/python_data/tests/: test_transform.py
tests/fixtures/python_library/: pyproject.toml
tests/fixtures/python_library/src/example_math/: __init__.py
tests/fixtures/python_library/tests/: test_math.py
tests/integration/: test_docker_execution.py  test_end_to_end.py  test_phase2_local_reliability.py  test_plugin_end_to_end.py
tests/manual/: test_codex_cli_smoke.py
tests/plugin/: evals.json
tests/unit/: test_agents.py  test_approval_gate.py  test_approvals.py  test_artifacts.py  test_candidate_preview.py  test_candidates.py  test_cli.py  test_codex_cli.py  test_doctor.py  test_domain.py  test_events.py  test_execution.py  test_execution_gate.py  test_execution_models.py  test_executor_selection.py  test_localization.py  test_mcp_server.py  test_package_data.py  test_patching.py  test_plugin_package.py  test_preflight.py  test_provider_context.py  test_providers.py  test_reporting.py  test_repository.py  test_run_builder.py  test_run_sessions.py  test_symbols.py  test_validation.py  test_workflow.py
